# HXL-Data-Science-file-formats

./: .editorconfig  .gitattributes  .gitignore  .pylintrc  .travis.yml  CNAME  README.md  hxlm-tests.py  index.hdp.yml  prepare-hxlm-relsease.sh  prepare-urnresolver-http.sh  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: 02-hdpl-racket.yml  02-hdpl-racket.yml.disabled  adocs-build.yml
guides/: command-line-tools-for-csv.sh  command-line-tools-for-encoding.sh  command-line-tools-overview.sh  preview-huge-ammount-of-data.md
hdp-conventions/: README.md  collaborative-work.md  security-considerations.md
hdpl-conventions/: README.md  salve-mundi.hdpl.rkt
hdpl-conventions/proof-of-concept/: automated-tests
hdpl-conventions/proof-of-concept/automated-tests/: README.md
hdpl-conventions/proof-of-concept/javascript/: README.md
hdpl-conventions/proof-of-concept/python/: README.md
hdpl-conventions/proof-of-concept/racket-lang/: salve-mundi.hdpl.rkt  testum-radix.rkt  testum.rkt  un-cod-services.rkt  مرحبا-بالعالم.ara.rkt
hdpl-conventions/prototype/: README.md  salve-mundi-hdlp-lat-Latn.rkt  testum.rkt
hdpl-conventions/prototype/hdp-toolchain/: LICENSE-APACHE  LICENSE-MIT  README.md  info.rkt  main.rkt
hdpl-conventions/prototype/hdpl/: .gitignore  README.md  hdpl.rkt  info.rkt  main.rkt  radix.rkt
hxlm/: README.md
hxlm-js/: .gitignore  README.md  hdplisp-editor-ltr.html  hxlm-js.sum  index-src.html  index.html  package.json  testum.html
hxlm-js/bootstrapper/: hdp-aux.js  hdp-aux.mjs  hdp-i18n.mjs  hdp-l10n.mjs  hdp-minimam.js  hdp-minimam.mjs  hdpb-aux.mjs  hdpb-i18n.mjs  hdpb-l10n.mjs  hdpb-lisp.mjs  hdpb-minimam.mjs  hdplisp.js  hdplisp.mjs  testum-hdpb-lisp.mjs  testum.mjs
hxlm-js/bootstrapper/lisp/: cor-librarium.mjs  datatype.mjs  hdpb-lisp.mjs  norvig-lispy.mjs  testum.mjs  util.mjs
hxlm/core/: __init__.py  base.py  compliance.py  constant.py  exception.py  hdp.py  hxl.py  schema.py  types.py  util.py
hxlm/core/_dt/: __init__.py  test.py
hxlm/core/hdp/: __init__.py  datamodel.py  exception.py  index.py  item.py  project.py  raw.py  util.py
hxlm/core/htype/: __init__.py  actor.py  compliance.py  data.py  encryption.py  level.py  license.py  recipe.py  routing.py  (+5 more)
hxlm/hxltype/: base.py  weight.py
hxlm/lisp/: README.md  __init__.py
hxlm/locale/: README.md  hdp.pot
hxlm/ontologia/: README.md  URNData.ebnf  cor.hdplisp.yml  core.hdplisp.yml  core.lkg.yml  core.urn.yml  core.vkg.yml  hdp.json-schema.json
hxlm/ontology/: README.md  core.lkg.yml  core.urn.yml  core.vkg.yml  hdp.json-schema.json  test.yml
hxlm/routing/: __init__.py  main.py
hxlm/schema/: hmeta.schema.json
hxlm/taxonomy/: util.py
hxlm/xa_gdpr/: meta.py
hxlm/xa_humanitarian/: sensitive.py
hxlm/xa_sus/: meta.py
hxlm/xl_por/: meta.py
hxltm/: .gitignore  README.adoc  README.md  index.html
hxltm/archivum/: README.adoc  README.md  index.html
ontologia/: README.md  cor.hdplisp.yml  cor.hxltm.yml  core.vkg.yml  servitium.hdplisp.yml  servitium.urn.yml
ontologia/cod/: README.md  cod.thesaurum.hxl.csv  servitium-auxilium-mappam.hxl.csv  servitium-auxilium-populationem-statisticum.hxl.csv  thesaurum.hxl.csv
ontologia/codicem/: TODO.md  codicem.numerum.hxl.csv
ontologia/iso/: iso.15924.hxl.csv  iso.3166.hxl.csv  iso.639-3.hxl.csv
ontologia/json/: cor.hdplisp.json  cor.hdplisp.json.sum  cor.hxltm.json  cor.hxltm.json.sum  core.lkg.json.sum  core.vkg.json  defallo.urn.json  defallo.urn.json.sum  servitium.hdplisp.json  servitium.hdplisp.json.sum
ontologia/unicode/: .gitignore  README.md  unicode.sh
ontologia/urn/: defallo.urn.yml  regulare-expressionem.hxl.csv
tests/: hxlated-xarray-pandas-dask-test.py  hxlated-xarray-pandas-dust-test.py  hxlm-manual-tests.py  manual-tests.sh  test_core.py  test_core_bin_urnresolver.py  test_core_htype.py  test_core_hxl_data_processing_specs.py  test_core_schema.py  test_core_schema_urn.py  test_core_urn.py  test_routing.py  test_schema.py  test_shell_basic.py  test_zzz_doctest.py  transpile-python-to-javascript.sh
tests/files/: iris_hxlated-csv+meta.hxl  iris_hxlated-csv.csv  iris_hxlated-tab.tab
tests/grammar/: instaparse-abnf_test.cljc
tests/hrecipe/: README.md  hello-world.hrecipe.hdp.yml  hello-world.hrecipe.mul.hdp.yml  indigenous-language-brazil.dataset.hdp.yml  indigenous-language-brazil.dataset.mul.hdp.yml  salve-mundi.hrecipe.mul.hdp.yml  salve-mundi.hrecipe.rus.hdp.yml  salve-mundi_v0-8-3+.hrecipe.lat.hdp.yml  salve-mundi_v0-8-3+.hrecipe.rus.hdp.yml  yemen-01.hrecipe.hdp.yml  yemen-01.hrecipe.mul.hdp.yml
tests/htransformare/: salve-mundi.lat.hdp.yml  salve-mundi.por.hdp.yml
tests/hxl-processing-specs/: hxl-processing-specs-test-01.hdp.yml  hxl-processing-specs-test-01.mul.hdp.yml
tests/hxl-recipe/: recipe-test-01-recipe1.json  recipe-test-01.hdp.yml  recipe-test-01.yml  recipe-test-2021-yemen.json
tests/hxltm/: .gitignore  csv-3-exemplum.csv  download-hxltm-datum.sh  hxltm-exemplum-linguam.tm.hxl.csv  hxltm-exemplum-linguam_WITHOUT-BOM.tm.hxl.csv  manuale-testum.sh
tests/schema/: README.md  azure-pipelines.yml  hmeta.ara.yml  test-eng.hdpd.yml
tests/urnresolver/: README.md
testum/: README.md
testum/hxltm/: .gitignore  disciplinam-manuale-anglicum.sh  download-hxltm-datum.sh  hxltm-exemplum-glossarium-minimum.tm.hxl.csv  hxltm-exemplum-linguam.tm.hxl.csv  hxltm-exemplum-linguam.tmeta.yml  hxltmcli--help_eng-Latn.txt  hxltmdexml--help_eng-Latn.txt  iate-exemplum.tbx  manuale-testum.sh  vscode-settings.json
urn-data/: README.md
urn-data-specification/: README.md
urn-data-specification/example/: urn-data-xz-eticaai.md  urn-data-zz-like-cod-ab.md  urn-data-zz-like-cod-ps.md
urn-data-specification/rfc/: draft-rocha-urn-data-00.md  draft-rocha-urn-data-00.txt
urn-data/data.urn.arpa/: README.md  data-urn-arpa.py
urn-data/example/: urn-data-__-org.example.md  urn-data-zz-like-ckan.md  urn-data-zz-like-cod-ab.md
urn-data/rfc/: draft-rocha-urn-data-00.md  draft-rocha-urn-data-00.txt  make.sh
urn-data/urn-resolver-http/: .htaccess  README.md  passenger_wsgi.py  things.py
(+250 files in other folders)
