[metadata]
# Emerson Rocha notes:
#     using username '-eticaai' to provide some namespace
#     we're not planning to release this on pip (at least not soon, since
#     exist both security implications and voluntarily void estimulate
#     people to publish forks)
#
#     Also, note that for > HDSL3, like HDSL4, something that on humanitarian
#     context would be considered 'Strictly Confidential', so the idea of
#     design an plugin system is taking in account regional usage, like
#     Brazilian PPCAAM or related to comptroller/ombudsman/organized crime/etc
#     be able to extend/validate.
name = hxlm-base-eticaai
version = 0.7.3
author = Emerson Rocha
author_email = rocha@ieee.org
description = Internal usage. Not production ready. Ignore it.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EticaAI/HXL-Data-Science-file-formats
project_urls =
    Bug Tracker = https://github.com/EticaAI/HXL-Data-Science-file-formats/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Typing :: Typed
    Topic :: Utilities

[options]

python_requires = >=3.7
namespace_packages = hxlm
packages =
    # hxlm.bin.core
    hxlm.core
    ; hxlm.core.constant
    hxlm.core.htype
    hxlm.core.internal
    hxlm.core.schema
    hxlm.data.baseline
    hxlm.routing
    hxlm.taxonomy
    hxlm.plugin.xa_amnesty
    hxlm.plugin.xa_gdpr
    hxlm.plugin.xa_humanitarian
    hxlm.plugin.xa_lgpd
    hxlm.plugin.xa_rc
    hxlm.plugin.xa_sus
    hxlm.plugin.xl_por
    hxlm.plugin.xz_eticaai

include_package_data = True

[options.package_data]
# * = *.yml, *.json, *.csv
hxlm.core.schema = *.yml, *.json, *.csv


[options.entry_points]
console_scripts =
    urnresolver = hxlm.core.bin:main

# libhxl
# pyyaml  # for config files, but we could also allow json?